# OIR-Segmentation

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  download_model.py  ingest.py  pyproject.toml  rag.py  requirements.txt  theme.py
chroma_db/: chroma.sqlite3
src/: config.py  model.py  predict.py
tests/: test_config.py  test_ingest.py  test_predict_utils.py
