[project]
name = "oirseg"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.9.0",
    "rank-bm25>=0.2.2",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["venv", "Model V4 output"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-level import not at top — needed for warnings filter in app.py
    "SIM102", # nested if — sometimes clearer than combined condition
    "SIM108", # ternary operator — readability preference
    "SIM118", # dict.keys() — explicit is fine
    "B905",   # zip strict — not needed for same-length internal data
    "RUF001", # ambiguous unicode — en-dashes intentional in UI strings
    "RUF003", # ambiguous unicode in comments
    "RUF005", # iterable unpacking — concat is clearer here
    "RUF046", # redundant int(round()) — defensive for numpy scalars
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config", "rag", "ingest", "theme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
